swagger UI (#12)
* add swagger ui

* backend structure

* tests

* Working hanlders

* api

* api refactoring

* cli options

* import and display working

* GENERATE_SOURCEMAP=false

* better handle not found

* bump cli version

* import using element dsl id

* delete docfile on element removed from model

* missing tests

* descriptions

* CLI documentation

* cli doc fix

* import scripts
