# Scripts/swagger.json
@@ -207,6 +207,85 @@
         }
       }
     },
+    "/api/workspaces/{workspaceId}/documentationfiles/openapi/{elementId}": {
+      "get": {
+        "tags": [
+          "DocumentationFiles"
+        ],
+        "parameters": [
+          {
+            "name": "workspaceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "elementId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/workspaces/{workspaceId}/docfile/openapi/{elementId}": {
+      "put": {
+        "tags": [
+          "DocumentationFilesImport"
+        ],
+        "parameters": [
+          {
+            "name": "workspaceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "elementId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ImportOpenApiFileRequest"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ImportOpenApiFileRequest"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/ImportOpenApiFileRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/workspaces/{workspaceId}/documentations/worskpace": {
       "get": {
         "tags": [
@@ -1304,17 +1383,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ImportWorkspaceCommand"
+                "$ref": "#/components/schemas/ImportWorkspaceRequest"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/ImportWorkspaceCommand"
+                "$ref": "#/components/schemas/ImportWorkspaceRequest"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/ImportWorkspaceCommand"
+                "$ref": "#/components/schemas/ImportWorkspaceRequest"
               }
             }
           }
@@ -1325,17 +1404,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/ImportWorkspaceResult"
+                  "$ref": "#/components/schemas/ImportWorkspaceResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ImportWorkspaceResult"
+                  "$ref": "#/components/schemas/ImportWorkspaceResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ImportWorkspaceResult"
+                  "$ref": "#/components/schemas/ImportWorkspaceResponse"
                 }
               }
             }
@@ -2165,7 +2244,21 @@
         },
         "additionalProperties": false
       },
-      "ImportWorkspaceCommand": {
+      "ImportOpenApiFileRequest": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "string",
+            "nullable": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ImportWorkspaceRequest": {
         "type": "object",
         "properties": {
           "workspaceId": {
@@ -2186,7 +2279,7 @@
         },
         "additionalProperties": false
       },
-      "ImportWorkspaceResult": {
+      "ImportWorkspaceResponse": {
         "type": "object",
         "properties": {
           "workspaceId": {
